template for excel, google maps

--- a/app/asset/lang/vi.json
+++ b/app/asset/lang/vi.json
@@ -146,7 +146,7 @@
 	    "trangThaiGiuMauDNA": "Trạng thái giữ mẫu DNA (khô, nước...)",
 	    "vungGenPhanTich": "Vùng gen phân tích",
 	    "dinhKemTrinhTuDNA": "Trình tự DNA",
-	    "congBoQuocTe": "Công bố/thông tin quốc tế (genbank...)",
+	    "congBoQuocTe": "Công bố/thông tin quốc tế ",
 	    "thongTinKhac6": "Thông tin khác",
 	    "thongTinKhac6Str": "Thông tin khác",
 	    "thongTinKhac6File": "Thông tin khác",
@@ -252,7 +252,7 @@
 	    "thongTinKhac2File": "Thông tin khác",
 	    "soLuongTieuBan": "Số lượng tiêu bản",
 	    "loaiMauVat": "Loại mẫu vật",
-	    "kichThuocMau": "Kích thước mẫu vật(dài x rộng x cao)",
+	    "kichThuocMau": "Kích thước mẫu vật",
 	    "chieuCao": "Chiều cao",
 	    "donVi_chieuCao": "Đơn vị chiều cao",
 	    "chieuRong": "Chiều rộng",
@@ -271,6 +271,8 @@
 	    "nguoiThuMau": "Người thu mẫu",
 	    "coQuanThuMau": "Cơ quan thu mẫu",
 	    "phuongPhapThuMau": "Phương pháp thu mẫu",
+	    "viTri": "Vị trí",
+	    "tinhKhac": "Thông tin khác",
 	    "quocGia": "Quốc gia",
 	    "tinh": "Tỉnh",
 	    "huyen": "Huyện",
@@ -317,7 +319,7 @@
 	    "mauDNA": "Mẫu DNA",
 	    "vungGenPhanTich": "Vùng gen phân tích",
 	    "dinhKemTrinhTuDNA": "Trình tự DNA",
-	    "congBoQuocTe": "Công bố/thông tin quốc tế (genbank...)",
+	    "congBoQuocTe": "Công bố/thông tin quốc tế ",
 	    "thongTinMauHatPhan": "Thông tin mẫu hạt phấn",
 	    "thongTinKhac6": "Thông tin khác",
 	    "thongTinKhac6Str": "Thông tin khác",
@@ -405,7 +407,7 @@
 	    "thongTinKhac2File": "Thông tin khác",
 	    "soLuongTieuBan": "Số lượng tiêu bản",
 	    "loaiMauVat": "Loại mẫu vật",
-	    "kichThuocMau": "Kích thước mẫu vật(dài x rộng x cao)",
+	    "kichThuocMau": "Kích thước mẫu vật",
 	    "chieuCao": "Chiều cao",
 	    "donVi_chieuCao": "Đơn vị chiều cao",
 	    "chieuRong": "Chiều rộng",
@@ -429,6 +431,7 @@
 	    "huyen": "Huyện",
 	    "xa": "Xã",
 	    "thon": "Thôn/bản",
+	    "tinhKhac": "Thông tin khác",
 	    "viDo": "Vĩ độ N",
 	    "kinhDo": "Kinh độ E",
 	    "thongTinDuAn": "Thông tin về Dự án, đề tài/chuyến/đợt thu thập mẫu vật",
@@ -525,6 +528,7 @@
 	    "tenKhoaHoc": "Tên khoa học",
 	    "diaDiemThuMau": "Địa điểm thu mẫu",
 	    "viTriToaDo": "Vị trí toạ độ theo hệ toạ độ VN 2000",
+	    "viTri": "Vị trí",
 	    "xuLyCheTac": "Xử lý chế tác mẫu vật",
 	    "thongTinDNA": "Thông tin DNA",
 	    "taiLieuPhanTichMixed": "Tài liệu phân tích/giám định/phân loại đi kèm",
@@ -576,7 +580,7 @@
 	    "thongTinKhac2File": "Thông tin khác",
 	    "soLuongTieuBan": "Số lượng tiêu bản",
 	    "loaiMauVat": "Loại mẫu vật",
-	    "kichThuocMau": "Kích thước mẫu vật(dài x rộng x cao)",
+	    "kichThuocMau": "Kích thước mẫu vật",
 	    "chieuCao": "Chiều cao",
 	    "donVi_chieuCao": "Đơn vị chiều cao",
 	    "chieuRong": "Chiều rộng",
@@ -595,6 +599,8 @@
 	    "nguoiThuMau": "Người thu mẫu",
 	    "coQuanThuMau": "Cơ quan thu mẫu",
 	    "phuongPhapThuMau": "Phương pháp thu mẫu",
+	    "viTri": "Vị trí",
+	    "tinhKhac": "Thông tin khác",
 	    "quocGia": "Quốc gia",
 	    "tinh": "Tỉnh",
 	    "huyen": "Huyện",
@@ -638,7 +644,7 @@
 	    "vungGenPhanTich": "Vùng gen phân tích",
 	    "trinhTuDNA": "Trình tự DNA",
 	    "dinhKemTrinhTuDNA": "Đính kèm Trình tự DNA",
-	    "congBoQuocTe": "Công bố/thông tin quốc tế (genbank...)",
+	    "congBoQuocTe": "Công bố/thông tin quốc tế ",
 	    "thongTinKhac6": "Thông tin khác",
 	    "thongTinKhac6Str": "Thông tin khác",
 	    "thongTinKhac6File": "Thông tin khác",
@@ -726,7 +732,7 @@
 	    "thongTinKhac2File": "Thông tin khác",
 	    "soLuongTieuBan": "Số lượng tiêu bản",
 	    "loaiMauVat": "Loại mẫu vật",
-	    "kichThuocMau": "Kích thước mẫu vật(dài x rộng x cao)",
+	    "kichThuocMau": "Kích thước mẫu vật",
 	    "chieuCao": "Chiều cao",
 	    "donVi_chieuCao": "Đơn vị chiều cao",
 	    "chieuRong": "Chiều rộng",
@@ -745,6 +751,8 @@
 	    "nguoiThuMau": "Người thu mẫu",
 	    "coQuanThuMau": "Cơ quan thu mẫu",
 	    "phuongPhapThuMau": "Phương pháp thu mẫu",
+	    "viTri": "Vị trí",
+	    "tinhKhac": "Thông tin khác",
 	    "quocGia": "Quốc gia",
 	    "tinh": "Tỉnh",
 	    "huyen": "Huyện",
