fix after merging

--- a/app/asset/lang/eng.json
+++ b/app/asset/lang/eng.json
@@ -1,8 +1,8 @@
 {
-	"tieude": "VietNam National Museum Of Nature",
+	"tieude": "Vietnam National Museum Of Nature",
 	"ngonngu": "Language",
 	"home":{
-		"tieude": "VietNam National Museum Of Nature"
+		"tieude": "Vietnam National Museum Of Nature"
 	},
 	"nav":{
 		"tieude": "Home",
