--- a/app/asset/lang/vi.json
+++ b/app/asset/lang/vi.json
@@ -2,7 +2,7 @@
 	"tieude": "Bảo tàng thiên nhiên Việt Nam",
 	"ngonngu": "Ngôn ngữ",
 	"home":{
-		"tieude": "Chào mừng đến với bảo tàng thiên nhiên Việt Nam"
+		"tieude": "Chào mừng đến với Bảo tàng thiên nhiên Việt Nam"
 	},
 	"nav":{
 		"tieude": "Trang chủ",
