--- a/app/asset/lang/eng.json
+++ b/app/asset/lang/eng.json
@@ -845,5 +845,9 @@
 	    "thongTinKhac7Mixed": "Thông tin khác",
 	    "thongTinKhac8Mixed": "Thông tin khác",
 	    "thongTinKhac9Mixed": "Thông tin khác"
+	},
+	"customfile": {
+		"nofilechose": "No file chosen",
+		"open": "Open"
 	}
 }
