icon for language

--- a/app/asset/lang/vi.json
+++ b/app/asset/lang/vi.json
@@ -278,6 +278,7 @@
 	    "huyen": "Huyện",
 	    "xa": "Xã",
 	    "thon": "Thôn/bản",
+	    "viTriToaDo": "Vị trí tọa độ theo hệ tọa độ Việt Nam 2000",
 	    "viDo": "Vĩ độ N",
 	    "kinhDo": "Kinh độ E",
 	    "doCao": "Độ cao (m)",
