limit max file size

--- a/app/asset/lang/vi.json
+++ b/app/asset/lang/vi.json
@@ -274,7 +274,7 @@
 	    "viTri": "Vị trí",
 	    "tinhKhac": "Thông tin khác",
 	    "quocGia": "Quốc gia",
-	    "tinh": "Tỉnh",
+	    "tinh": "Tỉnh/Thành phố",
 	    "huyen": "Huyện",
 	    "xa": "Xã",
 	    "thon": "Thôn/bản",
@@ -428,7 +428,7 @@
 	    "coQuanThuMau": "Cơ quan thu mẫu",
 	    "phuongPhapThuMau": "Phương pháp thu mẫu",
 	    "quocGia": "Quốc gia",
-	    "tinh": "Tỉnh",
+	    "tinh": "Tỉnh/Thành phố",
 	    "huyen": "Huyện",
 	    "xa": "Xã",
 	    "thon": "Thôn/bản",
@@ -603,7 +603,7 @@
 	    "viTri": "Vị trí",
 	    "tinhKhac": "Thông tin khác",
 	    "quocGia": "Quốc gia",
-	    "tinh": "Tỉnh",
+	    "tinh": "Tỉnh/Thành phố",
 	    "huyen": "Huyện",
 	    "xa": "Xã",
 	    "thon": "Thôn/bản",
@@ -755,7 +755,7 @@
 	    "viTri": "Vị trí",
 	    "tinhKhac": "Thông tin khác",
 	    "quocGia": "Quốc gia",
-	    "tinh": "Tỉnh",
+	    "tinh": "Tỉnh/Thành phố",
 	    "huyen": "Huyện",
 	    "xa": "Xã",
 	    "thon": "Thôn/bản",
