--- a/app/asset/lang/vi.json
+++ b/app/asset/lang/vi.json
@@ -396,13 +396,13 @@
 	    "thongTinKhac1": "Thông tin khác",
 	    "thongTinKhac1Str": "Thông tin khác",
 	    "thongTinKhac1File": "Thông tin khác",
-	    "tenTheoQuocTe": "Tên mẫu vật theo hệ thống phân loại của Quốc tế",
+	    "tenTheoQuocTe": "Tên MV theo phân loại của Quốc tế",
 	    "nguoiDinhTen": "Người định tên",
 	    "ngayDinhTen": "Ngày định tên",
 	    "tenVietNam": "Tên Việt Nam (phổ thông)",
 	    "tenDiaPhuong": "Tên địa phương",
 	    "tenTiengAnh": "Tên tiếng Anh",
-	    "tenTheoBaoTang": "Tên mẫu vật theo hệ thống phân loại của BTTNVN",
+	    "tenTheoBaoTang": "Tên MV theo phân loại của BTTNVN",
 	    "thongTinKhac2": "Thông tin khác",
 	    "thongTinKhac2Str": "Thông tin khác",
 	    "thongTinKhac2File": "Thông tin khác",
