--- a/app/asset/lang/vi.json
+++ b/app/asset/lang/vi.json
@@ -721,13 +721,13 @@
 	    "thongTinKhac1": "Thông tin khác",
 	    "thongTinKhac1Str": "Thông tin khác",
 	    "thongTinKhac1File": "Thông tin khác",
-	    "tenTheoQuocTe": "Tên mẫu vật theo hệ thống phân loại của Quốc tế",
+	    "tenTheoQuocTe": "Tên MV theo phân loại của Quốc tế",
 	    "nguoiDinhTen": "Người định tên",
 	    "ngayDinhTen": "Ngày định tên",
 	    "tenVietNam": "Tên Việt Nam (phổ thông)",
 	    "tenDiaPhuong": "Tên địa phương",
 	    "tenTiengAnh": "Tên tiếng Anh",
-	    "tenTheoBaoTang": "Tên mẫu vật theo hệ thống phân loại của BTTNVN",
+	    "tenTheoBaoTang": "Tên MV theo phân loại của BTTNVN",
 	    "thongTinKhac2": "Thông tin khác",
 	    "thongTinKhac2Str": "Thông tin khác",
 	    "thongTinKhac2File": "Thông tin khác",
@@ -770,7 +770,7 @@
 	    "thoiTietKhiThuMau": "Thời tiết khi thu mẫu",
 	    "dangDiaHinhNoiThuMau": "Dạng địa hình nơi thu mẫu",
 	    "thamThucVatNoiThuMau": "Thảm thực vật hiện tại nơi thu mẫu",
-	    "thongTinDuAn": "Thông tin về Dự án, đề tài/chuyến/đợt thu thập mẫu vật",
+	    "thongTinDuAn": "Thông tin Dự án, đề tài/chuyến thu mẫu vật",
 	    "ghiChepThucDia": "Ghi chép thực địa",
 	    "banDo": "Bản đồ",
 	    "ketQuaPhanTichDinhTuoi": "Kết quả phân tích định tuổi",
@@ -778,7 +778,7 @@
 	    "thongTinKhac4Str": "Thông tin khác",
 	    "thongTinKhac4File": "Thông tin khác",
 	    "ngayPhanTichMauDat": "Ngày phân tích mẫu đất",
-	    "hoSoPhanTichMauDat": "Hồ sơ phân tích mẫu đất (file đính kèm)",
+	    "hoSoPhanTichMauDat": "Hồ sơ phân tích mẫu đất",
 	    "ketQuaPhanTich": "Kết quả phân tích",
 	    "thoiGianGiamDinh": "Thời gian giám định mẫu",
 	    "nguoiGiamDinh": "Người giám định mẫu",
