--- a/app/asset/lang/vi.json
+++ b/app/asset/lang/vi.json
@@ -246,7 +246,7 @@
 	    "tenVietNam": "Tên Việt Nam (phổ thông)",
 	    "tenDiaPhuong": "Tên địa phương",
 	    "tenTiengAnh": "Tên tiếng Anh",
-	    "tenTheoBaoTang": "Tên mẫu vật theo hệ thống phân loại của BTTNVN",
+	    "tenTheoBaoTang": "Tên MV theo phân loại của BTTNVN",
 	    "thongTinKhac2": "Thông tin khác",
 	    "thongTinKhac2Str": "Thông tin khác",
 	    "thongTinKhac2File": "Thông tin khác",
@@ -285,7 +285,7 @@
 	    "doSau": "Độ sâu (m)",
 	    "vungBien": "Vùng biển",
 	    "sinhHoc": "Sinh học/sinh thái",
-	    "thongTinDuAn": "Thông tin về Dự án, đề tài/chuyến/đợt thu thập mẫu vật",
+	    "thongTinDuAn": "Thông tin Dự án, đề tài/chuyến thu mẫu vật",
 	    "ghiChepThucDia": "Ghi chép thực địa",
 	    "banDo": "Bản đồ",
 	    "thongTinKhac4": "Thông tin khác",
