--- a/app/asset/lang/eng.json
+++ b/app/asset/lang/eng.json
@@ -53,6 +53,7 @@
 	    "thongTinKhac1": "Thông tin khác",
 	    "thongTinKhac1Str": "Thông tin khác",
 	    "thongTinKhac1File": "Thông tin khác",
+
 	    "tenDongNghia": "Tên đồng nghĩa (synonym)",
 	    "gioi": "Giới",
 	    "nganh": "Ngành",
@@ -77,9 +78,10 @@
 	    "thongTinKhac2": "Thông tin khác",
 	    "thongTinKhac2Str": "Thông tin khác",
 	    "thongTinKhac2File": "Thông tin khác",
+
 	    "soLuongTieuBan": "Số lượng tiêu bản",
 	    "loaiMauVat": "Loại mẫu vật",
-	    "kichThuocMau": "Kích thước mẫu vật(dài x rộng x cao)",
+	    "kichThuocMau": "Kích thước mẫu vật",
 	    "chieuDai": "Chiều dài",
 	    "donVi_chieuDai": "Đơn vị chiều dài",
 	    "chieuRong": "Chiều rộng",
@@ -94,15 +96,20 @@
 	    "thongTinKhac3": "Thông tin khác",
 	    "thongTinKhac3Str": "Thông tin khác",
 	    "thongTinKhac3File": "Thông tin khác",
+
 	    "thoiGianThuMau": "Thời gian thu mẫu",
 	    "nguoiThuMau": "Người thu mẫu",
 	    "coQuanThuMau": "Cơ quan thu mẫu",
 	    "phuongPhapThuMau": "Phương pháp thu mẫu",
+	    "diaDiemThuMau": "Địa điểm thu mẫu",
+	    "viTri": "Vị trí",
 	    "quocGia": "Quốc gia",
-	    "tinh": "Tỉnh",
+	    "tinh": "Tỉnh/Thành phố",
 	    "huyen": "Huyện",
 	    "xa": "Xã",
 	    "thon": "Thôn/bản",
+	    "tinhKhac": "Thông tin khác",
+	    "viTriToaDo": "Vị trí tọa độ theo hệ tọa độ Việt Nam 2000",
 	    "viDo": "Vĩ độ N",
 	    "kinhDo": "Kinh độ E",
 	    "doCao": "Độ cao (m)",
@@ -115,6 +122,7 @@
 	    "thongTinKhac4": "Thông tin khác",
 	    "thongTinKhac4Str": "Thông tin khác",
 	    "thongTinKhac4File": "Thông tin khác",
+
 	    "thoiGianGiamDinh": "Thời gian phân tích/giám định/định loại mẫu",
 	    "nguoiGiamDinh": "Người phân tích/giám định/định loại mẫu",
 	    "coQuanToChucGiamDinh": "Cơ quan/tổ chức phân tích/giám định/phân loại mẫu",
@@ -130,10 +138,12 @@
 	    "thongTinKhac5": "Thông tin khác",
 	    "thongTinKhac5Str": "Thông tin khác",
 	    "thongTinKhac5File": "Thông tin khác",
+
 	    "anhMauVat": "Ảnh mẫu vật",
 	    "hinhAnhNgoaiThucDia": "Hình ảnh mẫu vật ngoài thực địa",
 	    "videoStr": "Thông tin về phim, video",
 	    "videoFile": "Đính kèm phim, video",
+
 	    "hinhAnhDinhKem": "Hình ảnh đính kèm Xử lý chế tác",
 	    "dinhKemXuLyCheTac": "Đính kèm Xử lý chế tác",
 	    "thuocTinhXuLyCheTac": "Thuộc tính Xử lý chế tác",
@@ -142,14 +152,17 @@
 	    "nguoiXuLy": "Người xử lý, chế tác mẫu",
 	    "coQuanXuLy": "Cơ quan xử lý, chế tác mẫu",
 	    "anhMauSauCheTac": "Ảnh mẫu sau chế tác",
+
+	    "thongTinDNA": "Thông tin DNA",
 	    "boPhanLayMauDNA": "Bộ phận lấy mẫu DNA (da, lông, máu, xương...)",
 	    "trangThaiGiuMauDNA": "Trạng thái giữ mẫu DNA (khô, nước...)",
 	    "vungGenPhanTich": "Vùng gen phân tích",
 	    "dinhKemTrinhTuDNA": "Trình tự DNA",
-	    "congBoQuocTe": "Công bố/thông tin quốc tế (genbank...)",
+	    "congBoQuocTe": "Công bố/thông tin quốc tế ",
 	    "thongTinKhac6": "Thông tin khác",
 	    "thongTinKhac6Str": "Thông tin khác",
 	    "thongTinKhac6File": "Thông tin khác",
+
 	    "phanBoVietNam": "Phân bố Việt Nam",
 	    "phanBoVietNamStr": "Phân bố",
 	    "phanBoVietNamFile": "Đính kèm",
@@ -160,6 +173,7 @@
 	    "thongTinKhac7": "Thông tin khác",
 	    "thongTinKhac7Str": "Thông tin khác",
 	    "thongTinKhac7File": "Thông tin khác",
+
 	    "ngayNhapMau": "Ngày nhập mẫu",
 	    "nguoiGiao": "Người giao mẫu",
 	    "nguoiNhan": "Người nhận mẫu",
@@ -182,6 +196,7 @@
 	    "thongTinKhac9": "Các thông tin khác",
 	    "thongTinKhac9Str": "Thông tin khác",
 	    "thongTinKhac9File": "Thông tin khác",
+
 	    "maDeTai": "Mã đề tài",
 	    "fDiaDiemThuMau": "Địa điểm thu mẫu",
 	    "fApproved": "Đã kiểm chứng",
@@ -243,13 +258,13 @@
 	    "tenVietNam": "Tên Việt Nam (phổ thông)",
 	    "tenDiaPhuong": "Tên địa phương",
 	    "tenTiengAnh": "Tên tiếng Anh",
-	    "tenTheoBaoTang": "Tên mẫu vật theo hệ thống phân loại của BTTNVN",
+	    "tenTheoBaoTang": "Tên MV theo phân loại của BTTNVN",
 	    "thongTinKhac2": "Thông tin khác",
 	    "thongTinKhac2Str": "Thông tin khác",
 	    "thongTinKhac2File": "Thông tin khác",
 	    "soLuongTieuBan": "Số lượng tiêu bản",
 	    "loaiMauVat": "Loại mẫu vật",
-	    "kichThuocMau": "Kích thước mẫu vật(dài x rộng x cao)",
+	    "kichThuocMau": "Kích thước mẫu vật",
 	    "chieuCao": "Chiều cao",
 	    "donVi_chieuCao": "Đơn vị chiều cao",
 	    "chieuRong": "Chiều rộng",
@@ -268,18 +283,21 @@
 	    "nguoiThuMau": "Người thu mẫu",
 	    "coQuanThuMau": "Cơ quan thu mẫu",
 	    "phuongPhapThuMau": "Phương pháp thu mẫu",
+	    "viTri": "Vị trí",
+	    "tinhKhac": "Thông tin khác",
 	    "quocGia": "Quốc gia",
-	    "tinh": "Tỉnh",
+	    "tinh": "Tỉnh/Thành phố",
 	    "huyen": "Huyện",
 	    "xa": "Xã",
 	    "thon": "Thôn/bản",
+	    "viTriToaDo": "Vị trí tọa độ theo hệ tọa độ Việt Nam 2000",
 	    "viDo": "Vĩ độ N",
 	    "kinhDo": "Kinh độ E",
 	    "doCao": "Độ cao (m)",
 	    "doSau": "Độ sâu (m)",
 	    "vungBien": "Vùng biển",
 	    "sinhHoc": "Sinh học/sinh thái",
-	    "thongTinDuAn": "Thông tin về Dự án, đề tài/chuyến/đợt thu thập mẫu vật",
+	    "thongTinDuAn": "Thông tin Dự án, đề tài/chuyến thu mẫu vật",
 	    "ghiChepThucDia": "Ghi chép thực địa",
 	    "banDo": "Bản đồ",
 	    "thongTinKhac4": "Thông tin khác",
@@ -314,7 +332,7 @@
 	    "mauDNA": "Mẫu DNA",
 	    "vungGenPhanTich": "Vùng gen phân tích",
 	    "dinhKemTrinhTuDNA": "Trình tự DNA",
-	    "congBoQuocTe": "Công bố/thông tin quốc tế (genbank...)",
+	    "congBoQuocTe": "Công bố/thông tin quốc tế ",
 	    "thongTinMauHatPhan": "Thông tin mẫu hạt phấn",
 	    "thongTinKhac6": "Thông tin khác",
 	    "thongTinKhac6Str": "Thông tin khác",
@@ -364,8 +382,6 @@
 	    "luuTruBaoQuan": "Nhóm dữ liệu Lưu trữ, bảo quản mẫu vật",
 	    "thongTinKhac": "Nhóm dữ liệu thông tin khác",
 	    "tenKhoaHoc": "Tên khoa học",
-	    "diaDiemThuMau": "Địa điểm thu mẫu",
-	    "viTriToaDo": "Vị trí toạ độ theo hệ toạ độ VN 2000",
 	    "xuLyCheTac": "Xử lý chế tác mẫu vật",
 	    "thongTinDNA": "Thông tin DNA",
 	    "taiLieuPhanTichMixed": "Tài liệu phân tích/giám định/phân loại đi kèm",
@@ -392,19 +408,19 @@
 	    "thongTinKhac1": "Thông tin khác",
 	    "thongTinKhac1Str": "Thông tin khác",
 	    "thongTinKhac1File": "Thông tin khác",
-	    "tenTheoQuocTe": "Tên mẫu vật theo hệ thống phân loại của Quốc tế",
+	    "tenTheoQuocTe": "Tên MV theo phân loại của Quốc tế",
 	    "nguoiDinhTen": "Người định tên",
 	    "ngayDinhTen": "Ngày định tên",
 	    "tenVietNam": "Tên Việt Nam (phổ thông)",
 	    "tenDiaPhuong": "Tên địa phương",
 	    "tenTiengAnh": "Tên tiếng Anh",
-	    "tenTheoBaoTang": "Tên mẫu vật theo hệ thống phân loại của BTTNVN",
+	    "tenTheoBaoTang": "Tên MV theo phân loại của BTTNVN",
 	    "thongTinKhac2": "Thông tin khác",
 	    "thongTinKhac2Str": "Thông tin khác",
 	    "thongTinKhac2File": "Thông tin khác",
 	    "soLuongTieuBan": "Số lượng tiêu bản",
 	    "loaiMauVat": "Loại mẫu vật",
-	    "kichThuocMau": "Kích thước mẫu vật(dài x rộng x cao)",
+	    "kichThuocMau": "Kích thước mẫu vật",
 	    "chieuCao": "Chiều cao",
 	    "donVi_chieuCao": "Đơn vị chiều cao",
 	    "chieuRong": "Chiều rộng",
@@ -424,10 +440,11 @@
 	    "coQuanThuMau": "Cơ quan thu mẫu",
 	    "phuongPhapThuMau": "Phương pháp thu mẫu",
 	    "quocGia": "Quốc gia",
-	    "tinh": "Tỉnh",
+	    "tinh": "Tỉnh/Thành phố",
 	    "huyen": "Huyện",
 	    "xa": "Xã",
 	    "thon": "Thôn/bản",
+	    "tinhKhac": "Thông tin khác",
 	    "viDo": "Vĩ độ N",
 	    "kinhDo": "Kinh độ E",
 	    "thongTinDuAn": "Thông tin về Dự án, đề tài/chuyến/đợt thu thập mẫu vật",
@@ -524,6 +541,7 @@
 	    "tenKhoaHoc": "Tên khoa học",
 	    "diaDiemThuMau": "Địa điểm thu mẫu",
 	    "viTriToaDo": "Vị trí toạ độ theo hệ toạ độ VN 2000",
+	    "viTri": "Vị trí",
 	    "xuLyCheTac": "Xử lý chế tác mẫu vật",
 	    "thongTinDNA": "Thông tin DNA",
 	    "taiLieuPhanTichMixed": "Tài liệu phân tích/giám định/phân loại đi kèm",
@@ -575,7 +593,7 @@
 	    "thongTinKhac2File": "Thông tin khác",
 	    "soLuongTieuBan": "Số lượng tiêu bản",
 	    "loaiMauVat": "Loại mẫu vật",
-	    "kichThuocMau": "Kích thước mẫu vật(dài x rộng x cao)",
+	    "kichThuocMau": "Kích thước mẫu vật",
 	    "chieuCao": "Chiều cao",
 	    "donVi_chieuCao": "Đơn vị chiều cao",
 	    "chieuRong": "Chiều rộng",
@@ -594,8 +612,10 @@
 	    "nguoiThuMau": "Người thu mẫu",
 	    "coQuanThuMau": "Cơ quan thu mẫu",
 	    "phuongPhapThuMau": "Phương pháp thu mẫu",
+	    "viTri": "Vị trí",
+	    "tinhKhac": "Thông tin khác",
 	    "quocGia": "Quốc gia",
-	    "tinh": "Tỉnh",
+	    "tinh": "Tỉnh/Thành phố",
 	    "huyen": "Huyện",
 	    "xa": "Xã",
 	    "thon": "Thôn/bản",
@@ -637,7 +657,7 @@
 	    "vungGenPhanTich": "Vùng gen phân tích",
 	    "trinhTuDNA": "Trình tự DNA",
 	    "dinhKemTrinhTuDNA": "Đính kèm Trình tự DNA",
-	    "congBoQuocTe": "Công bố/thông tin quốc tế (genbank...)",
+	    "congBoQuocTe": "Công bố/thông tin quốc tế ",
 	    "thongTinKhac6": "Thông tin khác",
 	    "thongTinKhac6Str": "Thông tin khác",
 	    "thongTinKhac6File": "Thông tin khác",
@@ -713,19 +733,19 @@
 	    "thongTinKhac1": "Thông tin khác",
 	    "thongTinKhac1Str": "Thông tin khác",
 	    "thongTinKhac1File": "Thông tin khác",
-	    "tenTheoQuocTe": "Tên mẫu vật theo hệ thống phân loại của Quốc tế",
+	    "tenTheoQuocTe": "Tên MV theo phân loại của Quốc tế",
 	    "nguoiDinhTen": "Người định tên",
 	    "ngayDinhTen": "Ngày định tên",
 	    "tenVietNam": "Tên Việt Nam (phổ thông)",
 	    "tenDiaPhuong": "Tên địa phương",
 	    "tenTiengAnh": "Tên tiếng Anh",
-	    "tenTheoBaoTang": "Tên mẫu vật theo hệ thống phân loại của BTTNVN",
+	    "tenTheoBaoTang": "Tên MV theo phân loại của BTTNVN",
 	    "thongTinKhac2": "Thông tin khác",
 	    "thongTinKhac2Str": "Thông tin khác",
 	    "thongTinKhac2File": "Thông tin khác",
 	    "soLuongTieuBan": "Số lượng tiêu bản",
 	    "loaiMauVat": "Loại mẫu vật",
-	    "kichThuocMau": "Kích thước mẫu vật(dài x rộng x cao)",
+	    "kichThuocMau": "Kích thước mẫu vật",
 	    "chieuCao": "Chiều cao",
 	    "donVi_chieuCao": "Đơn vị chiều cao",
 	    "chieuRong": "Chiều rộng",
@@ -744,8 +764,10 @@
 	    "nguoiThuMau": "Người thu mẫu",
 	    "coQuanThuMau": "Cơ quan thu mẫu",
 	    "phuongPhapThuMau": "Phương pháp thu mẫu",
+	    "viTri": "Vị trí",
+	    "tinhKhac": "Thông tin khác",
 	    "quocGia": "Quốc gia",
-	    "tinh": "Tỉnh",
+	    "tinh": "Tỉnh/Thành phố",
 	    "huyen": "Huyện",
 	    "xa": "Xã",
 	    "thon": "Thôn/bản",
@@ -760,7 +782,7 @@
 	    "thoiTietKhiThuMau": "Thời tiết khi thu mẫu",
 	    "dangDiaHinhNoiThuMau": "Dạng địa hình nơi thu mẫu",
 	    "thamThucVatNoiThuMau": "Thảm thực vật hiện tại nơi thu mẫu",
-	    "thongTinDuAn": "Thông tin về Dự án, đề tài/chuyến/đợt thu thập mẫu vật",
+	    "thongTinDuAn": "Thông tin Dự án, đề tài/chuyến thu mẫu vật",
 	    "ghiChepThucDia": "Ghi chép thực địa",
 	    "banDo": "Bản đồ",
 	    "ketQuaPhanTichDinhTuoi": "Kết quả phân tích định tuổi",
@@ -768,7 +790,7 @@
 	    "thongTinKhac4Str": "Thông tin khác",
 	    "thongTinKhac4File": "Thông tin khác",
 	    "ngayPhanTichMauDat": "Ngày phân tích mẫu đất",
-	    "hoSoPhanTichMauDat": "Hồ sơ phân tích mẫu đất (file đính kèm)",
+	    "hoSoPhanTichMauDat": "Hồ sơ phân tích mẫu đất",
 	    "ketQuaPhanTich": "Kết quả phân tích",
 	    "thoiGianGiamDinh": "Thời gian giám định mẫu",
 	    "nguoiGiamDinh": "Người giám định mẫu",
