add link query to list

--- a/app/asset/lang/eng.json
+++ b/app/asset/lang/eng.json
@@ -25,7 +25,8 @@
 		"baocao":{
 			"tieude": "Report",
 			"lichsunhaplieu": "Log",
-			"thongke": "Statistical"
+			"thongke": "Statistical",
+			"truyvan": "Map query"
 		},
 		"taikhoan":{
 			"quanly": "Manage account",
