sửa lại đường dẫn đến trang home mới

--- a/app/asset/lang/vi.json
+++ b/app/asset/lang/vi.json
@@ -48,6 +48,9 @@
 			"quanly": "Quản lý tài khoản",
 			"trangcanhan": "Trang cá nhân",
 			"dangxuat": "Đăng xuất"
+		},
+		"tailieu": {
+			"tailieu" : "Tài liệu"
 		}
 	},
 	"ani":{
