add form Mycology

--- a/app/asset/lang/eng.json
+++ b/app/asset/lang/eng.json
@@ -457,6 +457,178 @@
 		"thongTinKhac8Mixed":	"Other information",
 		"thongTinKhac9Mixed":	"Other information"
 	},
+	"myc": {
+		"title": "Add sample of Mycology data, Topic:",
+		"editTitle": "Edit sample of Mycology data, Topic:",
+		"soHieuBTTNVN": "Specimen number - VNMN",
+		"soHieuBaoTangCS": "Specimen number - Other museum(s)",
+		"soHieuThucDia": "Field collection number",
+		"kyHieuMauVatKhac": "Other identification numbers",
+		"thongTinKhac1": "Other information",
+		"thongTinKhac1Str": "Other information",
+		"thongTinKhac1File": "Other information",
+		"tenDongNghia": "Synonym(s)",
+		"gioi": "Kingdom",
+		"nganh": "Phylum",
+		"lop": "Class",
+		"phanLop": "Subclass",
+		"bo": "Order",
+		"phanBo": "Suborder",
+		"lienHo": "Superfamily",
+		"ho": "Family",
+		"phanHo": "Subfamily",
+		"tong": "Tribe",
+		"chiGiong": "Genus",
+		"phanChiPhanGiong": "Subgenus",
+		"loai": "Species",
+		"duoiLoai": "Subspecies",
+		"nguoiDinhTen": "Identified by",
+		"ngayDinhTen": "Date",
+		"tenVietNam": "Vietnamese name/Common name",
+		"tenDiaPhuong": "Local name",
+		"tenTiengAnh": "English name",
+		"tenTheoBaoTang": "VNMN name",
+		"thongTinKhac2": "Other information",
+		"thongTinKhac2Str": "Other information",
+		"thongTinKhac2File": "Other information",
+		"soLuongTieuBan": "Specimen Quantity",
+		"loaiMauVat": "Specimen Type",
+		"kichThuocMau": "SpecimenSize",
+		"chieuCao": "SpecimenHeight",
+		"donVi_chieuCao": "(Measured) unit",
+		"chieuRong": "SpecimenWidth",
+		"donVi_chieuRong": "(Measured) unit",
+		"chieuDai": "SpecimenLength",
+		"donVi_chieuDai": "(Measured) unit",
+		"trongLuong": "SpecimenWeight",
+		"donVi_trongLuong": "(Measured) unit",
+		"theTich": "SpecimenVolume",
+		"donVi_theTich": "(Measured) unit",
+		"tinhTrangMau": "Current specimencondition",
+		"thongTinKhac3": "Other information",
+		"thongTinKhac3Str": "Other information",
+		"thongTinKhac3File": "Other information",
+		"thoiGianThuMau": "Collecteddate",
+		"nguoiThuMau": "Collector(s)",
+		"coQuanThuMau": "Collecting Institution",
+		"phuongPhapThuMau": "Collecting method",
+		"viTri": "Locality",
+		"tinhKhac": "Other information",
+		"quocGia": "Country",
+		"tinh": "State/Province/Municipality",
+		"huyen": "District/Provincial city",
+		"xa": "Ward/Commune",
+		"thon": "Village/Hamlet",
+		"viTriToaDo": "Coordinates (VN 2000)",
+		"viDo": "Latitude N",
+		"kinhDo": "Longitude E",
+		"doCao": "Elevation (m)",
+		"doSau": "Depth (m)",
+		"vungBien": "Ocean",
+		"sinhHoc": "Remarks - Biology/Ecology",
+		"thongTinDuAn": "Granted/supported by",
+		"ghiChepThucDia": "Field notes",
+		"banDo": "Map",
+		"thongTinKhac4": "Other information",
+		"thongTinKhac4Str": "Other information",
+		"thongTinKhac4File": "Other information",
+		"thoiGianGiamDinh": "Analyzed/identified date",
+		"nguoiGiamDinh": "Analyzed/identified by (Individual(s))",
+		"coQuanToChucGiamDinh": "Analyzed/identified by (Institution(s))",
+		"taiLieuPhanTich": "Associated document(s)",
+		"taiLieuPhanTichStr": "Documents",
+		"taiLieuPhanTichFile": "Attachment",
+		"moTaHinhThai": "Morphological description",
+		"moTaHinhThaiStr": "Description",
+		"moTaHinhThaiFile": "Associated document(s)",
+		"hinhVe": "Illustration(s)",
+		"thongTinKhac5": "Other information",
+		"thongTinKhac5Str": "Other information",
+		"thongTinKhac5File": "Other information",
+		"anhMauVat": "Image(s)",
+		"hinhAnhNgoaiThucDia": "Field photo(s)",
+		"videoStr": "Video information",
+		"videoFile": "Video; Attachment",
+		"hinhAnhDinhKem": "Video; Attachment",
+		"dinhKemXuLyCheTac": "Preparation/Treatment - Attachment(s)",
+		"thuocTinhXuLyCheTac": "Preparation/Treatment - Information",
+		"phuongThucXuLy": "Preparation/Treatment - Method(s)",
+		"thoiGianXuLy": "Prepared/treated date",
+		"nguoiXuLy": "Prepared/treated by (individual(s))",
+		"coQuanXuLy": "Prepared/treated by (institution(s))",
+		"anhMauSauCheTac": "After preparation/treament photo(s)",
+		"viTriLayMauDNA": "Sampling region",
+		"mauDNA": "DNA ",
+		"vungGenPhanTich": "Analyzed genes",
+		"dinhKemTrinhTuDNA": "DNA sequence",
+		"congBoQuocTe": "Publication",
+		"thongTinMauHatPhan": "Pollen Data",
+		"thongTinKhac6": "Other information",
+		"thongTinKhac6Str": "Other information",
+		"thongTinKhac6File": "Other information",
+		"phanBoVietNam": "Distribution - Vietnam",
+		"phanBoVietNamStr": "Distribution - Vietnam - Information",
+		"phanBoVietNamFile": "Distribution - Vietnam - Attachment(s)",
+		"phanBoTrenTheGioi": "Distribution - Global",
+		"phanBoTrenTheGioiStr": "Distribution - Global - Information",
+		"phanBoTrenTheGioiFile": "Distribution -  Global - Attachment(s)",
+		"giaTriSuDung": "Use",
+		"thongTinKhac7": "Other information",
+		"thongTinKhac7Str": "Other information",
+		"thongTinKhac7File": "Other information",
+		"ngayNhapMau": "Accessioned  date",
+		"nguoiGiao": "Depositor",
+		"nguoiNhan": "Received by (individual(s))",
+		"coQuanNhapVatMau": "Deposited in (institution)",
+		"hinhThucNhapMau": "Acquisition method(s)",
+		"traoDoiMau": "Exchange",
+		"vayMuon": "Loan(s)",
+		"noiLuuTruMau": "Stored in",
+		"phong": "Room",
+		"tuGia": "Floor/Case/Cabinet",
+		"ngan": "Shelf/Drawer",
+		"hop": "Box",
+		"giayPhepNhapMau": "Import permit",
+		"hoSoNhapMauVatDiKem": "Associated document(s)",
+		"nguoiLapPhieuMauVat": "Registered by",
+		"nguoiNhapVaoPhanMem": "Input into database by",
+		"thongTinKhac8": "Other information",
+		"thongTinKhac8Str": "Other information",
+		"thongTinKhac8File": "Other information",
+		"thongTinKhac9": "Other information",
+		"thongTinKhac9Str": "Other information",
+		"thongTinKhac9File": "Other information",
+		"maDeTai": "Project code/number",
+		"fDiaDiemThuMau": "Location",
+		"fApproved": "Approved status",
+		"soHieu": "Specimen number",
+		"tenMau": "Specimen name",
+		"soLuongChatLuong": "Specimen quantity and quality",
+		"duLieuThuMau": "Data - Collection",
+		"duLieuPhanTichMau": "Data - Analyses/Identification",
+		"media": "Data - Media",
+		"phanBoVaSuDung": "Data - Distribution; Use",
+		"luuTruBaoQuan": "Data - Storage; Preservation",
+		"thongTinKhac": "Data - Other",
+		"tenKhoaHoc": "Scientific name",
+		"xuLyCheTac": "Preparation(s)/Treatment(s)",
+		"thongTinDNA": "DNA data",
+		"taiLieuPhanTichMixed": "Preparation(s) & Treatment(s) - Documents",
+		"moTaHinhThaiMixed": "Details - Morphology",
+		"khuLuuTruMau": "Storage area",
+		"phanBoVietNamMixed": "Distribution - Vietnam",
+		"phanBoTrenTheGioiMixed": "Distribution - Global",
+		"kichThuocMauMixed": "Size",
+		"thongTinKhac1Mixed": "Other information",
+		"thongTinKhac2Mixed": "Other information",
+		"thongTinKhac3Mixed": "Other information",
+		"thongTinKhac4Mixed": "Other information",
+		"thongTinKhac5Mixed": "Other information",
+		"thongTinKhac6Mixed": "Other information",
+		"thongTinKhac7Mixed": "Other information",
+		"thongTinKhac8Mixed": "Other information",
+		"thongTinKhac9Mixed": "Other information"
+	},
 	"geo": {
 		"title": "Add sample of Geology data, Topic:",
 		"editTitle": "Edit sample of Geology data, Topic:",
