--- a/app/asset/lang/vi.json
+++ b/app/asset/lang/vi.json
@@ -460,6 +460,178 @@
 	    "thongTinKhac8Mixed": "Thông tin khác",
 	    "thongTinKhac9Mixed": "Thông tin khác"
 	},
+	"myc": {
+		"title": "Thêm mẫu dữ liệu nấm, Đề tài: ",
+		"editTitle": "Chỉnh sửa mẫu dữ liệu nấm, Đề tài: ",
+		"soHieuBTTNVN": "Số hiệu BTTNVN",
+		"soHieuBaoTangCS": "Số hiệu Bảo tàng cơ sở",
+		"soHieuThucDia": "Số hiệu thực địa",
+		"kyHieuMauVatKhac": "Các ký hiệu mẫu vật khác",
+		"thongTinKhac1": "Thông tin khác",
+		"thongTinKhac1Str": "Thông tin khác",
+		"thongTinKhac1File": "Thông tin khác",
+		"tenDongNghia": "Tên đồng nghĩa (synonym)",
+		"gioi": "Giới",
+		"nganh": "Ngành",
+		"lop": "Lớp",
+		"phanLop": "Phân lớp",
+		"bo": "Bộ",
+		"phanBo": "Phân bộ",
+		"lienHo": "Liên họ",
+		"ho": "Họ",
+		"phanHo": "Phân họ",
+		"tong": "Tông",
+		"chiGiong": "Chi",
+		"phanChiPhanGiong": "Phân chi",
+		"loai": "Loài",
+		"duoiLoai": "Dưới loài/phân loài",
+		"nguoiDinhTen": "Người định tên",
+		"ngayDinhTen": "Ngày định tên",
+		"tenVietNam": "Tên Việt Nam (phổ thông)",
+		"tenDiaPhuong": "Tên địa phương",
+		"tenTiengAnh": "Tên tiếng Anh",
+		"tenTheoBaoTang": "Tên MV theo phân loại của BTTNVN",
+		"thongTinKhac2": "Thông tin khác",
+		"thongTinKhac2Str": "Thông tin khác",
+		"thongTinKhac2File": "Thông tin khác",
+		"soLuongTieuBan": "Số lượng tiêu bản",
+		"loaiMauVat": "Loại mẫu vật",
+		"kichThuocMau": "Kích thước mẫu vật",
+		"chieuCao": "Chiều cao",
+		"donVi_chieuCao": "Đơn vị chiều cao",
+		"chieuRong": "Chiều rộng",
+		"donVi_chieuRong": "Đơn vị chiều rộng",
+		"chieuDai": "Chiều dài",
+		"donVi_chieuDai": "Đơn vị chiều dài",
+		"trongLuong": "Trọng lượng",
+		"donVi_trongLuong": "Đơn vị trọng lượng",
+		"theTich": "Thể tích",
+		"donVi_theTich": "Đơn vị thể tích",
+		"tinhTrangMau": "Tình trạng mẫu vật",
+		"thongTinKhac3": "Thông tin khác",
+		"thongTinKhac3Str": "Thông tin khác",
+		"thongTinKhac3File": "Thông tin khác",
+		"thoiGianThuMau": "Thời gian thu mẫu",
+		"nguoiThuMau": "Người thu mẫu",
+		"coQuanThuMau": "Cơ quan thu mẫu",
+		"phuongPhapThuMau": "Phương pháp thu mẫu",
+		"viTri": "Vị trí",
+		"tinhKhac": "Thông tin khác",
+		"quocGia": "Quốc gia",
+		"tinh": "Tỉnh/Thành phố",
+		"huyen": "Huyện",
+		"xa": "Xã",
+		"thon": "Thôn/bản",
+		"viTriToaDo": "Vị trí tọa độ theo hệ tọa độ Việt Nam 2000",
+		"viDo": "Vĩ độ N",
+		"kinhDo": "Kinh độ E",
+		"doCao": "Độ cao (m)",
+		"doSau": "Độ sâu (m)",
+		"vungBien": "Vùng biển",
+		"sinhHoc": "Sinh học/sinh thái",
+		"thongTinDuAn": "Thông tin Dự án, đề tài/chuyến thu mẫu vật",
+		"ghiChepThucDia": "Ghi chép thực địa",
+		"banDo": "Bản đồ",
+		"thongTinKhac4": "Thông tin khác",
+		"thongTinKhac4Str": "Thông tin khác",
+		"thongTinKhac4File": "Thông tin khác",
+		"thoiGianGiamDinh": "Thời gian phân tích/giám định/định loại mẫu",
+		"nguoiGiamDinh": "Người phân tích/giám định/định loại mẫu",
+		"coQuanToChucGiamDinh": "Cơ quan/tổ chức phân tích/giám định/phân loại mẫu",
+		"taiLieuPhanTich": "Tài liệu phân tích/giám định/phân loại đi kèm",
+		"taiLieuPhanTichStr": "Tài liệu",
+		"taiLieuPhanTichFile": "Đính kèm",
+		"moTaHinhThai": "Mô tả/đặc điểm hình thái ",
+		"moTaHinhThaiStr": "Mô tả",
+		"moTaHinhThaiFile": "Đính kèm",
+		"hinhVe": "Hình vẽ",
+		"thongTinKhac5": "Thông tin khác",
+		"thongTinKhac5Str": "Thông tin khác",
+		"thongTinKhac5File": "Thông tin khác",
+		"anhMauVat": "Ảnh mẫu vật",
+		"hinhAnhNgoaiThucDia": "Hình ảnh mẫu vật ngoài thực địa",
+		"videoStr": "Thông tin về phim, video",
+		"videoFile": "Đính kèm phim, video",
+		"hinhAnhDinhKem": "Hình ảnh đính kèm Xử lý chế tác",
+		"dinhKemXuLyCheTac": "Đính kèm Xử lý chế tác",
+		"thuocTinhXuLyCheTac": "Thuộc tính Xử lý chế tác",
+		"phuongThucXuLy": "Phương thức xử lý chế tác",
+		"thoiGianXuLy": "Thời gian xử lý chế tác",
+		"nguoiXuLy": "Người xử lý, chế tác mẫu",
+		"coQuanXuLy": "Cơ quan xử lý, chế tác mẫu",
+		"anhMauSauCheTac": "Ảnh mẫu sau chế tác",
+		"viTriLayMauDNA": "Vị trí lấy mẫu",
+		"mauDNA": "Mẫu DNA",
+		"vungGenPhanTich": "Vùng gen phân tích",
+		"dinhKemTrinhTuDNA": "Trình tự DNA",
+		"congBoQuocTe": "Công bố/thông tin quốc tế ",
+		"thongTinMauHatPhan": "Thông tin mẫu hạt phấn",
+		"thongTinKhac6": "Thông tin khác",
+		"thongTinKhac6Str": "Thông tin khác",
+		"thongTinKhac6File": "Thông tin khác",
+		"phanBoVietNam": "Phân bố Việt Nam",
+		"phanBoVietNamStr": "Phân bố",
+		"phanBoVietNamFile": "Đính kèm",
+		"phanBoTrenTheGioi": "Phân bố trên thế giới",
+		"phanBoTrenTheGioiStr": "Phân bố",
+		"phanBoTrenTheGioiFile": "Đính kèm",
+		"giaTriSuDung": "Giá trị sử dụng",
+		"thongTinKhac7": "Thông tin khác",
+		"thongTinKhac7Str": "Thông tin khác",
+		"thongTinKhac7File": "Thông tin khác",
+		"ngayNhapMau": "Ngày nhập mẫu",
+		"nguoiGiao": "Người giao mẫu",
+		"nguoiNhan": "Người nhận mẫu",
+		"coQuanNhapVatMau": "Cơ quan nhập mẫu",
+		"hinhThucNhapMau": "Hình thức nhập mẫu",
+		"traoDoiMau": "Trao đổi mẫu",
+		"vayMuon": "Vay mượn mẫu",
+		"noiLuuTruMau": "Nơi lưu giữ mẫu",
+		"phong": "Phòng",
+		"tuGia": "Tủ, giá",
+		"ngan": "Ngăn tủ, ngăn giá",
+		"hop": "Hộp",
+		"giayPhepNhapMau": "Giấy phép nhập mẫu",
+		"hoSoNhapMauVatDiKem": "Hồ sơ nhập mẫu vật đi kèm",
+		"nguoiLapPhieuMauVat": "Người lập phiếu mẫu vật",
+		"nguoiNhapVaoPhanMem": "Người nhập thông tin vào phần mềm",
+		"thongTinKhac8": "Thông tin khác",
+		"thongTinKhac8Str": "Thông tin khác",
+		"thongTinKhac8File": "Thông tin khác",
+		"thongTinKhac9": "Thông tin khác",
+		"thongTinKhac9Str": "Thông tin khác",
+		"thongTinKhac9File": "Thông tin khác",
+		"maDeTai": "Mã đề tài",
+		"fDiaDiemThuMau": "Địa điểm thu mẫu",
+		"fApproved": "Đã kiểm chứng",
+		"soHieu": "Số hiệu mẫu vật",
+		"tenMau": "Tên mẫu vật",
+		"soLuongChatLuong": "Số lượng và chất lượng mẫu vật",
+		"duLieuThuMau": "Nhóm dữ liệu Thu mẫu",
+		"duLieuPhanTichMau": "Nhóm dữ liệu Phân tích mẫu/Giám định mẫu",
+		"media": "Nhóm dữ liệu Hình ảnh/phim, tài liệu mẫu vật",
+		"phanBoVaSuDung": "Nhóm dữ liệu Phân bố và giá trị sử dụng",
+		"luuTruBaoQuan": "Nhóm dữ liệu Lưu trữ, bảo quản mẫu vật",
+		"thongTinKhac": "Nhóm dữ liệu thông tin khác",
+		"tenKhoaHoc": "Tên khoa học",
+		"xuLyCheTac": "Xử lý chế tác mẫu vật",
+		"thongTinDNA": "Thông tin DNA",
+		"taiLieuPhanTichMixed": "Tài liệu phân tích/giám định/phân loại đi kèm",
+		"moTaHinhThaiMixed": "Mô tả/đặc điểm hình thái",
+		"khuLuuTruMau": "Khu lưu trữ mẫu",
+		"phanBoVietNamMixed": "Phân bố Việt Nam",
+		"phanBoTrenTheGioiMixed": "Phân bố trên thế giới",
+		"kichThuocMauMixed": "Kích thước mẫu vật",
+		"thongTinKhac1Mixed": "Thông tin khác",
+		"thongTinKhac2Mixed": "Thông tin khác",
+		"thongTinKhac3Mixed": "Thông tin khác",
+		"thongTinKhac4Mixed": "Thông tin khác",
+		"thongTinKhac5Mixed": "Thông tin khác",
+		"thongTinKhac6Mixed": "Thông tin khác",
+		"thongTinKhac7Mixed": "Thông tin khác",
+		"thongTinKhac8Mixed": "Thông tin khác",
+		"thongTinKhac9Mixed": "Thông tin khác"
+	},
 	"geo": {
 		"title": "Thêm mẫu dữ liệu địa chất, Đề tài: ",
 		"editTitle": "Chỉnh sửa mẫu dữ liệu địa chất, Đề tài: ",
