--- a/app/asset/lang/vi.json
+++ b/app/asset/lang/vi.json
@@ -1126,7 +1126,8 @@
 		"soLuongDiaChat": "Số lượng mẫu vật địa chất",
 		"soLuongCoSinh": "Số lượng mẫu vật cổ sinh",
 		"soLuongThoNhuong": "Số lượng mẫu vật thổ nhưỡng",
-		"soLuongThucVat": "Số lượng mẫu vật thực vật"
+		"soLuongThucVat": "Số lượng mẫu vật thực vật",
+		"soLuongNam": "Số lượng mẫu vật nấm"
 
 	},
 	"customfile": {
