update search Mycology

--- a/app/asset/lang/eng.json
+++ b/app/asset/lang/eng.json
@@ -95,6 +95,7 @@
 		"dongvat": "Zoology",
 		"thonhuong": "Pedology",
 		"thucvat": "Botany",
+		"nam": "Mycology",
 		"from": "From",
 		"to": "to",
 		"namThuMau": "Date collected",
