--- a/app/asset/lang/vi.json
+++ b/app/asset/lang/vi.json
@@ -95,6 +95,7 @@
 		"dongvat": "Động vật",
 		"thonhuong": "Thổ nhưỡng",
 		"thucvat": "Thực vật",
+		"nam": "Nấm",
 		"from": "Từ",
 		"to": "đến",
 		"namThuMau": "Năm thu mẫu",
